<?xml version="1.0"?>
<package format="2">
  <name>t265_depth</name>
  <version>0.0.1</version>
  <description> t265 depth from stereo </description>
  <maintainer email="pol@pol.com">pol</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>image_transport</depend>
  <depend>cv_bridge</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>dynamic_reconfigure</depend>
  
  <export>

  </export>
</package>
